# stock-trading-bot

./: .gitignore  AGENT_STATUS.md  TASKS.md  pyproject.toml  requirements.txt
contracts/: README.md  result_contract.schema.json  result_contract_v0.md  validate.py
contracts/examples/: orb.result.example.json
council-chat/: README.md  council.config.json  package-lock.json  package.json  server.js  start.command
council-chat/lib/: runModel.js  store.js  synthesize.js
council-chat/public/: app.js  index.html  styles.css
docs/: REPORT.md  REPORT_D2.md  REPORT_harness_council.md  dashboard_results.html  gate_provenance.md
docs/superpowers/plans/: 2026-06-12-two-track-stock-research.md
docs/superpowers/specs/: 2026-06-12-two-track-stock-research-design.md  2026-06-13-paper-trade-harness-design.md
scripts/: fetch_data.py  make_report.py  portfolio_view.py  robustness.py  run_backtests.py
src/stockslab/: data.py  engine.py  indicators.py  metrics.py  result_contract.py
tests/: test_data.py  test_engine.py  test_indicators.py  test_metrics.py  test_registry_discovery.py  test_result_contract.py  test_rotation.py  test_run_backtests.py  test_smoke.py  test_strat_bb_squeeze_breakout.py  test_strat_donchian_breakout.py  test_strat_ema_pullback.py  test_strat_gap_fade.py  test_strat_high52_breakout.py  test_strat_intraday_momentum.py  test_strat_levered_etf_meanrev.py  test_strat_orb.py  test_strat_rsi2_meanrev.py  test_strat_rsi_dip_uptrend.py  test_strat_sector_rotation.py  test_strat_vwap_reclaim.py  test_strat_xsec_momentum.py
(+15 files in other folders)
