[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockslab"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stockslab", "stockslab.strategies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
